--- a/03-Images/index.html
+++ b/03-Images/index.html
@@ -3,15 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Page</title>
-    <style>
-
-        
-    </style>
+    <title>Document</title>
 </head>
 <body>
-
-
-
+    <img src="dog.webp" alt="" width="100px">
+    <img src="dancing-banana.gif" alt="" width="50px">
 </body>
 </html>
