--- a/06-Forms/index.html
+++ b/06-Forms/index.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body > form > input[type=number]:nth-child(25){
+            background-color: green;
+        }
+
+        body > form > input[type=color]:nth-child(30){
+
+        }
+
+
+    </style>
     <title>Forms</title>
 </head>
 <body>
