--- a/08-Colours&fonts/index.html
+++ b/08-Colours&fonts/index.html
@@ -51,23 +51,21 @@
 
         }
 
-        table {
-            align-self: center;
-            text-align: center;
-            width: 90%;
-        }
+       
 
-        .cent{
+        table{
+            margin:auto;
+            width: 90%;
             text-align: center;
-            margin: auto;
+            background-color: white;
+            
+        }
+        body{
+            background-color: aqua;
         }
     </style>
 </head>
 <body>
-    <div class="dance">
-        Some Text
-
-    </div>
 <div class="cent">
    <table border="1px">
     <tr>
@@ -75,6 +73,8 @@
     </tr>
 
    </table>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci beatae deserunt sequi voluptates, ab sunt consectetur recusandae minus! Natus autem hic incidunt laborum obcaecati illum odit suscipit magnam fugiat totam?</p>
+   
    </div>
 </body>
 </html>
