--- a/12-Grids/index.html
+++ b/12-Grids/index.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+        div{
+            background-color: darkblue;
+            color: white;
+            padding: 10px;
+            border: 1px solid red;
+            max-height: 60px;
+        }
+        .left{
+            width: 25%;
+            float: left;
+        }
+        .mid{
+            width: 50%;
+            float: left;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="left">
+        <p>.left 25%</p>
+    </div>
+    <div class="mid">
+        <p>.mid 50%</p>
+    </div>
+    <div class="left">
+        <p>.left 25%</p>
+    </div>
+
+
+   
 </body>
 </html>
