--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -91,8 +91,115 @@
             </div>
         </div>
     </div>
-
   </div>
 
+  <!-- OFFERS  -->
+
+  <section class="offers" id="offers">
+    <div class="menu-1 bg-dark p-5">
+        <div class="container">
+            <div class="grid">
+                <div class="row align-items-center">
+                    <div class="col-md-6 dance text-white fw-bold">
+                        <p class="h2">CBR <span class="text-danger">FireBlade</span></p>
+                        <p class="lead fst-italic">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum nesciunt suscipit saepe illo consectetur aspernatur dignissimos voluptatibus hic culpa, vel quibusdam beatae itaque obcaecati quis. Illum quos voluptatum rerum reprehenderit.</p>
+                    </div>
+                    <div class="col-md-6 align-items-center">
+                        <img src="images/CBR.jpg" class="img-fluid" width="400px" height="200px">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="menu-2 bg-white p-5">
+        <div class="container">
+            <div class="grid">
+                <div class="row align-items-center">
+                    <div class="col-md-6 align-items-center">
+                        <img src="images/Ducatti.jpg" class="img-fluid" width="400px" height="200px">
+                    </div>
+                    <div class="col-md-6 dance  fw-bold">
+                        <p class="h2">Ducati <span class="text-danger">966</span></p>
+                        <p class="lead fst-italic">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum nesciunt suscipit saepe illo consectetur aspernatur dignissimos voluptatibus hic culpa, vel quibusdam beatae itaque obcaecati quis. Illum quos voluptatum rerum reprehenderit.</p>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+  </section>
+<!-- MECHANICS -->
+  <section class="mechanics p-5" id="mechanics">
+    <div class="container">
+        <div class="grid">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="card shadow-lg my-2">
+                        <img src="images/dave.jpg" class="img-fluid">
+                        <div class="card body p-2">
+                            <p class="h4 card-title fw-bold">Dave McWilliams</p>
+                            <p class="dance text-muted">Honda Specialist</p>
+                            <p class="fst-italic">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                            <div class="d-flex justify-content-around">
+                                <i class="fab fa-facebook text-primary fa-2x"></i>
+                                <i class="fab fa-twitter text-info fa-2x"></i>
+                                <i class="fab fa-youtube text-danger fa-2x"></i>
+                                <i class="fab fa-instagram text-warning fa-2x"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card shadow-lg my-2">
+                        <img src="images/frank.jpg" class="img-fluid">
+                        <div class="card body p-2">
+                            <p class="h4 card-title fw-bold">Frank ZappyZapp</p>
+                            <p class="dance text-muted">BMW Specialist</p>
+                            <p class="fst-italic">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                            <div class="d-flex justify-content-around">
+                                <i class="fab fa-facebook text-primary fa-2x"></i>
+                                <i class="fab fa-twitter text-info fa-2x"></i>
+                                <i class="fab fa-youtube text-danger fa-2x"></i>
+                                <i class="fab fa-instagram text-warning fa-2x"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card shadow-lg my-2">
+                        <img src="images/marcus.jpg" class="img-fluid">
+                        <div class="card body p-2">
+                            <p class="h4 card-title fw-bold">Marcus McWilliams</p>
+                            <p class="dance text-muted">Toyota Specialist</p>
+                            <p class="fst-italic">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                            <div class="d-flex justify-content-around">
+                                <i class="fab fa-facebook text-primary fa-2x"></i>
+                                <i class="fab fa-twitter text-info fa-2x"></i>
+                                <i class="fab fa-youtube text-danger fa-2x"></i>
+                                <i class="fab fa-instagram text-warning fa-2x"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card shadow-lg my-2">
+                        <img src="images/mavis.jpg" class="img-fluid">
+                        <div class="card body p-2">
+                            <p class="h4 card-title fw-bold">Mavis Smith</p>
+                            <p class="dance text-muted">Suzuki Specialist</p>
+                            <p class="fst-italic">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                            <div class="d-flex justify-content-around">
+                                <i class="fab fa-facebook text-primary fa-2x"></i>
+                                <i class="fab fa-twitter text-info fa-2x"></i>
+                                <i class="fab fa-youtube text-danger fa-2x"></i>
+                                <i class="fab fa-instagram text-warning fa-2x"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+  </section>
 </body>
 </html>
